Added all basic models and API without authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.data.mongodb.uri=${MONGODB_DATABASE_URL\:mongodb\://localhost\:27017/ecommerce}
+spring.data.mongodb.uuid-representation=standard
+spring.data.mongodb.auto-index-creation=true
+springdoc.pathsToMatch=/api/**
