--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.data.mongodb.uri=${MONGODB_DATABASE_URL\:mongodb\://localhost\:27017/ecom
 spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
 springdoc.pathsToMatch=/api/**
+upgrad.app.jwtSecret=upgradSecret
+upgrad.app.jwtExpirationMs=8400000
+upgrad.app.jwtCookieName=jwtCookierasdas
