--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.data.mongodb.uri=mongodb+srv://admin:caputdraconis@mohinishdev.fdi78qk.mongodb.net/ecommerce?retryWrites=true&w=majority
 spring.data.mongodb.uri=${MONGODB_DATABASE_URL\:mongodb\://localhost\:27017/ecommerce}
 spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
